[project]
name = "oryx"
version = "0.0.1"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
description = "Deep Reinforcement Learning with JAX and Equinox."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Theodore Pinkerton", email = "p_t@fastmail.net" }]
dependencies = [
  "jax",
  "equinox",
  "optax",
  "diffrax",
  "distreqx",
  "tensorboardX",
]

[project.optional-dependencies]
test = ["pytest", "pytest-xdist", "pyright"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib", "-Werror"]

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722", "E501"]
select = ["E", "F", "I001"]

[tool.pyright]
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false # Incompatible with eqx.AbstractVar
reportFunctionMemberAccess = false
